--- a/src/my-example.yaml
+++ b/src/my-example.yaml
@@ -42,6 +42,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
+  ingressClassName: nginx
   rules:
     - host: test.api.simplevrithin.com
       http:
