--- a/src/my-example.yaml
+++ b/src/my-example.yaml
@@ -37,7 +37,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: test-nginx-ingress
+  name: test-traefik-ingress
   namespace: test
   annotations:
     traefik.ingress.kubernetes.io/router.middlewares: kube-system-services-strip@kubernetescrd
@@ -47,7 +47,7 @@ spec:
       http:
         paths:
           - path: /
-            pathType: Prefix
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: test-nginx-service
