--- a/src/traefix-config.yaml
+++ b/src/traefix-config.yaml
@@ -14,7 +14,7 @@ spec:
       traefik:
         expose: true
     dashboard:
-      enable: true
+      enabled: true
     providers:
       kubernetesCRD:
         allowCrossNamespace: true
